syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message SetWidgetSlotReq {
	bool unequip = 2;
	uint32 widgetItemId = 4;
}
