syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message SetWidgetSlotRsp {
	uint32 widgetItemId = 4;
}
